docs: Update and improve `stackablectl` documentation (#101)
* Initial commit

* Add demos partial

* Split up xtask commands

* Add doc auto gen xtask

* Adjust module nav

* Adjust operator cmd output, fix typo

* Update operator doc page

* Continue release doc page

* Revert to `rustls-tls`

* Continue stackablectl demos doc migration

* Copy earthquake demo docs

* Copy logging demo page

* Copy waterlavel demo docs

* Move demo images to sub folder

* Add anomaly detection demo docs

* Copy trino iceberg demo docs

* Copy trino taxi data demo docs

* Update docs auto generation

* Add stackablectl base command docs

* Update image paths

* Add customization docs

* Add quickstart

* Add minor adjustments

* Style adjustment for start page

* Add quickstart and installation page to nav

* Adjust style for demo command page

* Adjust style for operator command page

* Adjust style for release command page

* Adjust style for airflow-scheduled-job page

* Update introduction for operator command

* Start styling adjustments for demo data-lakehouse

* Continue adjustments on data-lakehouse demo

* Finish data-lakehouse demo adjustments

* Add instance hint partial

* Adjust hbase-cycling-data demo

* Adjust jupyterhub demo

* Adjust logging demo

* Start adjustments for nifi earthquake demo

* Adjust spark anomaly detection docs

* Adjust add demo customization docs

* Adjust add stack customization docs

* Adjust add release customization docs

* Finish nifi earthquake demo adjustments

* Start nifi water level demo adjustments

* Finish nifi water level adjustments

* Start trino iceberg adjustments

* Finish trino iceber demo adjustments

* Adjust trino taxi data demo docs

* Add installation docs

* Adjust quick start guide

* fix: nav

* docs: Remove demo docs, as they are moved to https://github.com/stackabletech/demos

* callout

* docs

* Add minor formatting

* Update broken xrefs

* Fix xrefs, remove unused section

* Update xrefs on stackablectl start p

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,3 +1,7 @@
 ---
-name: home
+name: management
+title: SDP Management
 version: "nightly"
+nav:
+  - modules/cockpit/nav.adoc
+  - modules/stackablectl/nav.adoc
