--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,10 +29,12 @@ k8s-openapi = { version = "0.19", default-features = false, features = ["v1_27"]
 kube = { version = "0.85", default-features = false, features = ["client", "rustls-tls"] }
 lazy_static = "1.4"
 nu-ansi-term = "0.49"
+once_cell = "1.18"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
-reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls"] }
+regex = "1.9"
+reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
