--- a/.github/workflows/pr_cockpit.yml
+++ b/.github/workflows/pr_cockpit.yml
@@ -2,9 +2,17 @@
 name: Pull Request Cockpit
 
 on:
-  workflow_run:
-    workflows: [Pull Request General]
-    types: [completed]
+  pull_request:
+    paths:
+      - ".github/workflows/pr_cockpit.yml"
+      - "rust/stackable-cockpitd"
+      - "rust/stackable-cockpit"
+      - "docs/modules/cockpit"
+      - "docs/modules/ROOT"
+      - "Cargo.lock"
+      - "deploy"
+      - "docker"
+      - "go.sum"
 
 env:
   RUST_VERSION: 1.70.0
@@ -17,43 +25,20 @@ env:
   DEV_REPO_HELM_URL: https://repo.stackable.tech/repository/helm-dev
 
 jobs:
-  check-files:
-    name: Check for Changed Files
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    outputs:
-      any_changed: ${{ steps.changes.outputs.any_changed }}
-    steps:
-      # This workflow is triggered when the 'Pull Request General' is completed.
-      # This ensures that basic checks succeeded, indepent of the files changed.
-      # To only run heavy and long-running jobs when required, we check if any
-      # of the below listed files changes. Sadly, this requires an action, because
-      # the 'workflow_run' trigger doesn't support the 'paths' field like the
-      # 'pull:request' trigger does.
-      - id: changes
-        uses: tj-actions/changed-files@v39
-        with:
-          fail_on_initial_diff_error: true
-          files: |
-            .github/workflows/pr_cockpit.yml
-            rust/stackable-cockpitd
-            rust/stackable-cockpit
-            docs/modules/cockpit
-            docs/modules/ROOT
-            Cargo.lock
-            deploy
-            docker
-            go.sum
+  general-checks:
+    name: General Pull Request Checks
+    uses: ./.github/workflows/pr_general.yml
+
+  reviewdog-checks:
+    name: Reviewdog Pull Request Checks
+    uses: ./.github/workflows/pr_reviewdog.yml
 
   check-charts:
     name: Helm Chart Check
     runs-on: ubuntu-latest
-    # This job needs the above check-files job. It then additionally checks, if
-    # there are any changes in the specified set of files. It will otherwise
-    # not run. The 'publish' job will also not run, as it needs this job.
     needs:
-      - check-files
-    if: needs.check-files.outputs.any_changed == 'true'
+      - general-checks
+      - reviewdog-checks
     steps:
       - name: Checkout Repository
         uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
@@ -107,7 +92,7 @@ jobs:
       - name: Update Version
         run: |
           cargo install cargo-edit --version 0.11.11
-          cargo set-version --offline --workspace 0.0.0-pr${{ github.event.workflow_run.pull_requests.number }}
+          cargo set-version --offline --workspace 0.0.0-pr${{ github.event.pull_request.number }}
 
       # Recreate charts and publish charts and docker image. The "-e" is needed as we want to override the
       # default value in the makefile if called from this action, but not otherwise (i.e. when called locally).
