--- a/.github/workflows/pr_stackablectl.yml
+++ b/.github/workflows/pr_stackablectl.yml
@@ -2,9 +2,16 @@
 name: Pull Request Stackablectl
 
 on:
-  workflow_run:
-    workflows: [Pull Request General]
-    types: [completed]
+  pull_request:
+    paths:
+      - ".github/workflows/pr_stackablectl"
+      - "docs/modules/stackablectl"
+      - "rust/stackable-cockpit"
+      - "rust/stackablectl"
+      - "rust/helm-sys"
+      - "Cargo.lock"
+      - "go.sum"
+      - "extra"
 
 env:
   RUST_VERSION: 1.70.0
@@ -16,38 +23,20 @@ env:
   RUST_LOG: "info"
 
 jobs:
-  check-files:
-    name: Check for Changed Files
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    outputs:
-      any_changed: ${{ steps.changes.outputs.any_changed }}
-    steps:
-      # This workflow is triggered when the 'Pull Request General' is completed.
-      # This ensures that basic checks succeeded, indepent of the files changed.
-      # To only run heavy and long-running jobs when required, we check if any
-      # of the below listed files changes. Sadly, this requires an action, because
-      # the 'workflow_run' trigger doesn't support the 'paths' field like the
-      # 'pull:request' trigger does.
-      - id: changes
-        uses: tj-actions/changed-files@v39
-        with:
-          fail_on_initial_diff_error: true
-          files: |
-            .github/workflows/pr_stackablectl
-            docs/modules/stackablectl
-            rust/stackable-cockpit
-            rust/stackablectl
-            rust/helm-sys
-            Cargo.lock
-            go.sum
-            extra
+  general-checks:
+    name: General Pull Request Checks
+    uses: ./.github/workflows/pr_general.yml
+
+  reviewdog-checks:
+    name: Reviewdog Pull Request Checks
+    uses: ./.github/workflows/pr_reviewdog.yml
+
   build:
     name: Build stackablectl for ${{ matrix.target }}
     runs-on: ${{ matrix.os }}
     needs:
-      - check-files
-    if: needs.check-files.outputs.any_changed == 'true'
+      - general-checks
+      - reviewdog-checks
     strategy:
       fail-fast: false
       matrix:
