Only target package stackable-cockpit when setting version

--- a/.github/workflows/pr_cockpit.yml
+++ b/.github/workflows/pr_cockpit.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Update Version
         run: |
           cargo install cargo-edit --version 0.11.11
-          cargo set-version --offline --workspace 0.0.0-pr${{ github.event.pull_request.number }}
+          cargo set-version --offline --package stackable-cockpit 0.0.0-pr${{ github.event.pull_request.number }}
 
       # Recreate charts and publish charts and docker image. The "-e" is needed as we want to override the
       # default value in the makefile if called from this action, but not otherwise (i.e. when called locally).
