Run Cockpit Web workflow when CI changes

--- a/.github/workflows/pr_cockpit-web.yml
+++ b/.github/workflows/pr_cockpit-web.yml
@@ -3,6 +3,7 @@ name: web
 on:
   pull_request:
     paths:
+      - ".github/workflows/pr_cockpit-web.yml"
       - "package.json"
       - "yarn.lock"
       - "web"
