ci: Improve workflow files (#111)
* Update workflow files

* Fix yaml lint errors

* Setup node and install deps when building stackable-cockpitd

* Update actions, remove old workflow file

* Bump checkout action version

* Adjust cockpit and stackablectl workflow triggers

* Fix double quote issue

* Rework workflow triggers again

Because workflow_run is weird and doesn't trigger on branches other than
the default one like 'main' or 'master'. In conclusion: This trigger is
weirdly designed and pretty much useless.

* Only target package stackable-cockpit when setting version

* Run Cockpit Web workflow when CI changes

* Minor formatting

--- a/.github/workflows/pr_reviewdog.yml
+++ b/.github/workflows/pr_reviewdog.yml
@@ -1,6 +1,7 @@
 ---
-name: reviewdog
-on: pull_request
+name: Pull Request Reviewdog
+
+on: workflow_call
 
 permissions:
   contents: read
@@ -12,7 +13,7 @@ jobs:
   actionlint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: reviewdog/action-actionlint@b6feb003955cad286985c42e7047f4567a798f3f # v1.36.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -20,7 +21,7 @@ jobs:
   eslint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # v2.2.4
         with:
           version: 7.26.1
@@ -33,7 +34,7 @@ jobs:
   flake8:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: actions/setup-python@13ae5bb136fac2878aff31522b9efb785519f984 # v4.6.1
         with:
           python-version: "3.11"
@@ -41,19 +42,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
-  # Hadolint is failing to run.. issues when there are no dockerfiles?
-  # hadolint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
-  #     - uses: reviewdog/action-hadolint@141ffd8d2f0b75e6fc7c87341331985448b62aa4 # v1.34.1
-  #       with:
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
-
   markdownlint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: reviewdog/action-markdownlint@97e3df02fe1573d505a7b268046a44fa5409cbc3 # tag=v0.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -62,7 +54,7 @@ jobs:
   shellcheck:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: reviewdog/action-shellcheck@f52d78284b4941028952125a10c76676c3d456eb # v1.17.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -70,7 +62,7 @@ jobs:
   yamllint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: reviewdog/action-yamllint@8c429dfe4fc47b1ce1fa99a64e94693880d5dc30 # tag=v1.6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
