--- a/.github/workflows/pr_cockpit-web.yml
+++ b/.github/workflows/pr_cockpit-web.yml
@@ -1,23 +1,19 @@
 ---
 name: web
 on:
-  push:
-    branches:
-      - main
-      - staging
-      - trying
-      - "renovate/**"
-    tags:
-      - '[0-9][0-9].[0-9]+.[0-9]+'
   pull_request:
-  merge_group:
+    paths:
+      - ".github/workflows/pr_cockpit-web.yml"
+      - "package.json"
+      - "yarn.lock"
+      - "web"
 
 jobs:
   build-web:
     name: Web frontend built
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3.6.0
         with:
           node-version: 18
@@ -29,7 +25,7 @@ jobs:
     name: Validate web formatting
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3.3.0
+      - uses: actions/checkout@8ade135a41bc03ea155e62e844d188df1ea18608 # v4.1.0
       - uses: actions/setup-node@64ed1c7eab4cce3362f8c340dee64e5eaeef8f7c # v3.6.0
         with:
           node-version: 18
