--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["rust/*", "web", "."]
+resolver = "2"
 
 [workspace.package]
 # Currently we version stackablectl separately from the other tools in this repo,
@@ -19,6 +20,7 @@ axum = { version = "0.6", features = ["http2", "headers"] }
 bcrypt = "0.15"
 clap = { version = "4.2.1", features = ["derive", "env"] }
 clap_complete = "4.2"
+color-print = "0.3.5"
 comfy-table = { version = "7.0", features = ["custom_styling"] }
 directories = "5.0"
 dotenvy = "0.15"
@@ -28,7 +30,6 @@ indexmap = { version = "2.0", features = ["serde"] }
 k8s-openapi = { version = "0.19", default-features = false, features = ["v1_27"] }
 kube = { version = "0.85", default-features = false, features = ["client", "rustls-tls"] }
 lazy_static = "1.4"
-nu-ansi-term = "0.49"
 once_cell = "1.18"
 phf = "0.11"
 phf_codegen = "0.11"
