--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 snafu = "0.7"
+spinoff = "0.8.0"
 stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.47.0" }
 tera = "1.18"
 tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
