--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ phf_codegen = "0.11"
 rand = "0.8"
 regex = "1.9"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
-semver = "1.0"
+semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
