--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -21,6 +21,7 @@ k8s-openapi.workspace = true
 kube.workspace = true
 rand.workspace = true
 reqwest.workspace = true
+semver.workspace = true
 serde_json.workspace = true
 serde_yaml.workspace = true
 serde.workspace = true
