--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,13 +17,14 @@ repository = "https://github.com/stackabletech/stackable-cockpit/"
 async-trait = "0.1"
 axum = { version = "0.6", features = ["http2", "headers"] }
 bcrypt = "0.15"
+bindgen = "0.68.1"
+cc = "1.0.83"
 clap = { version = "4.2.1", features = ["derive", "env"] }
 clap_complete = "4.2"
 comfy-table = { version = "7.0", features = ["custom_styling"] }
 directories = "5.0"
 dotenvy = "0.15"
 futures = "0.3"
-gobuild = "0.1.0-alpha.2"
 indexmap = { version = "2.0", features = ["serde"] }
 k8s-openapi = { version = "0.19", default-features = false, features = ["v1_27"] }
 kube = { version = "0.85", default-features = false, features = ["client", "rustls-tls"] }
