--- a/rust/helm-sys/Cargo.toml
+++ b/rust/helm-sys/Cargo.toml
@@ -11,4 +11,6 @@ publish = false
 links = "helm"
 
 [build-dependencies]
-gobuild.workspace = true
+cc.workspace = true
+bindgen.workspace = true
+snafu.workspace = true
