ci: fix path matching for pr pipelines

--- a/.github/workflows/pr_cockpit-web.yml
+++ b/.github/workflows/pr_cockpit-web.yml
@@ -6,7 +6,7 @@ on:
       - ".github/workflows/pr_cockpit-web.yml"
       - "package.json"
       - "yarn.lock"
-      - "web"
+      - "web/**"
 
 jobs:
   build-web:
