--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = ["rust/*", "web", "."]
+resolver = "2"
 
 [workspace.package]
 # Currently we version stackablectl separately from the other tools in this repo,
@@ -26,23 +27,22 @@ directories = "5.0"
 dotenvy = "0.15"
 futures = "0.3"
 indexmap = { version = "2.0", features = ["serde"] }
-k8s-openapi = { version = "0.19", default-features = false, features = ["v1_27"] }
-kube = { version = "0.85", default-features = false, features = ["client", "rustls-tls"] }
+k8s-openapi = { version = "0.20", default-features = false, features = ["v1_28"] }
+kube = { version = "0.87", default-features = false, features = ["client", "rustls-tls"] }
 lazy_static = "1.4"
-nu-ansi-term = "0.49"
 once_cell = "1.18"
 phf = "0.11"
 phf_codegen = "0.11"
 rand = "0.8"
 regex = "1.9"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
-semver = "1.0"
+semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.9"
 sha2 = "0.10"
 snafu = "0.7"
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.47.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.56.1" }
 tera = "1.18"
 tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
 tower-http = "0.4"
