fix: Semver version `pre` field doesn't contain dash (-)
This fixes the helm repo selection based on the parsed version. The old
code had several short-comings:

- The `pre` field doesn't include the dash used to separate version from
pre. The matching however included this dash, resulting in wrong repo
selection.
- Versions where `pre` starts with `pr` didn't probably select the Helm
test repo.

--- a/rust/stackable-cockpit/Cargo.toml
+++ b/rust/stackable-cockpit/Cargo.toml
@@ -34,3 +34,6 @@ tracing.workspace = true
 url.workspace = true
 utoipa = { workspace = true, optional = true }
 which.workspace = true
+
+[dev-dependencies]
+rstest.workspace = true
