--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ phf_codegen = "0.11"
 rand = "0.8"
 regex = "1.9"
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+rstest = "0.18"
 semver = { version = "1.0", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
