--- a/.github/workflows/pr_stackablectl.yml
+++ b/.github/workflows/pr_stackablectl.yml
@@ -65,3 +65,9 @@ jobs:
       - name: Build for non-Windows
         if: matrix.os != 'windows-latest'
         run: cargo build --target ${{ matrix.target }} -p stackablectl
+
+      - name: Ensure shell completions up-to-date
+        if: matrix.os = 'x86_64-unknown-linux-gnu'
+        run: |
+          cargo xtask gen-comp
+          git diff --exit-code
