--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,20 @@
+# Rust
 /target
-.env
+
+# Frontend
 /node_modules
 htpasswd
-/result
+.yarn
+
+# Nix
 gomod2nix.toml
 Cargo.nix
 crate-hashes.json
-.yarn
+
+# Misc
+/demos
+/stacks
+/result
+.env
 .pnp
 .pnp.*
