--- a/.github/workflows/pr_stackablectl.yml
+++ b/.github/workflows/pr_stackablectl.yml
@@ -67,13 +67,13 @@ jobs:
         run: cargo build --target ${{ matrix.target }} -p stackablectl
 
       - name: Ensure shell completions up-to-date
-        if: matrix.os = 'x86_64-unknown-linux-gnu'
+        if: matrix.os == 'x86_64-unknown-linux-gnu'
         run: |
           cargo xtask gen-comp
           git diff --exit-code
 
       - name: Ensure man page is up-to-date
-        if: matrix.os = 'x86_64-unknown-linux-gnu'
+        if: matrix.os == 'x86_64-unknown-linux-gnu'
         run: |
           cargo xtask gen-man
           git diff --exit-code
